fix z-index issue with leaflet map and block popover

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -2,3 +2,7 @@
     border: none;
     width: 100%;
 }
+
+.wp-block-petitphp-map .leaflet-map {
+    z-index: 10;
+}
