--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 .wp-block-petitphp-map .leaflet-map {
-    display: block;
     width: 100%;
     height: 250px;
 }
